--- a/client/src/Styles/Username.module.css
+++ b/client/src/Styles/Username.module.css
@@ -21,3 +21,7 @@
     @apply border bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
     @apply hover:bg-[#ff6a6a];
 }
+
+input[type='file']{
+    display: none;
+}
